[tool.poetry]
name = "rym-webcrawler"
version = "0.2.0"
description = ""
authors = ["Silas Genário <sg.lopes26@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.2.0"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipykernel = "^6.13.0"

[tool.poetry.scripts]
rymcharts = "rym_webcrawler.main:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
